# aether_org

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DOCKER.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: publish-pypi.yml  trigger-deploy.yml
integration_hub/: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  requirements.txt
integration_hub/app/: config.py  events.py  formatting.py  main.py  metricgraph_client.py  query_router.py  router.py  routing_config.py  state.py
integration_hub/app/agent/: context_agent.py
integration_hub/app/clients/: activity_client.py  margin_client.py
integration_hub/app/connectors/: base.py  linear.py  slack.py  teams.py
integration_hub/tests/: test_endpoints.py  test_linear.py  test_query_router.py  test_router.py  test_slack_and_formatting.py
margin_sdk/: README.md  pyproject.toml
margin_sdk/examples/: quickstart.py
margin_sdk/margin/: __init__.py  _config.py  client.py  context.py
margin_sdk/tests/: test_client.py
metricgraph/: .env.example  .gitignore  README.md  docker-compose.yml
metricgraph/backend/: Dockerfile  entrypoint.sh  requirements.txt
metricgraph/demo/: generate_excel.py
metricgraph/frontend/: .vercelignore  package-lock.json  package.json  tailwind.config.js
registry_governance/: .env.example  .gitignore  README.md  config.example.yaml  docker-compose.yml
registry_governance/backend/: Dockerfile  alembic.ini  requirements.txt
registry_governance/frontend/: package-lock.json  package.json
scripts/: push-component-repos.sh
(+113 files in other folders)
