[project]
name = "margin"
version = "0.1.0"
description = "Margin SDK — ingest metrics and context into MetricGraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Aether", email = "hello@margin.dev" }]
keywords = ["metrics", "knowledge-graph", "data-catalog", "investment"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/AetherAIorg/margin_mvp"
Documentation = "https://github.com/AetherAIorg/margin_mvp/tree/main/margin_sdk"
Repository = "https://github.com/AetherAIorg/margin_mvp"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "build", "twine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["margin"]

[tool.hatch.build.targets.sdist]
include = ["margin/", "README.md", "pyproject.toml", "tests/", "examples/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
